# TZoo

./: CMakeLists.txt  TAnimal.cpp  TAnimal.h  TArtiodactyla.cpp  TArtiodactyla.h  TCarnivora.cpp  TCarnivora.h  TElephas.cpp  TElephas.h  TGiraffa.cpp  TGiraffa.h  THippopotamus.cpp  THippopotamus.h  TLeo.cpp  TLeo.h  TLoxodonta.cpp  TLoxodonta.h  TProboscidea.cpp  TProboscidea.h  TTigris.cpp  TTigris.h  TZoo.cpp  TZoo.h  main.cpp
